syntax = "proto3";
package barbershop;

option go_package = "barber-service";

service BarberService {
  rpc CheckAvailability (BarberAvailabilityRequest) returns (BarberAvailabilityResponse);
  rpc GetAvailableSlots (AvailableSlotsRequest) returns (AvailableSlotsResponse);
  rpc BookAppointment (BookAppointmentRequest) returns (BookAppointmentResponse);
}

message BarberAvailabilityRequest {
  string barberId = 1;
  string date = 2;
  string time = 3;
}

message BarberAvailabilityResponse {
  bool available = 1;
  string error = 2;
}

message AvailableSlotsRequest {
  string barberId = 1;
  string date = 2;
}

message AvailableSlotsResponse {
  repeated string slots = 1;
  string error = 2;
}

message BookAppointmentRequest {
  string userId = 1;
  string barberId = 2;
  string date = 3;
  string time = 4;
}

message BookAppointmentResponse {
  bool success = 1;
  string error = 2;
}